--- a/index.html
+++ b/index.html
@@ -128,10 +128,8 @@
                     
 <br>
 <h2>How to fill out IRS Free File?</h2>
-<p>File your taxes online for free -</p>
 <ol>
-<li>For filling out tax forms through IRS Free File feature.</li>
-<li>Gather the necessary documents like W-2 forms, 1099 forms, Last year’s tax return, Social Security numbers & Bank account information.</li>
+<li>For filling out tax forms through IRS Free File feature - gather the necessary documents like W-2 forms, 1099 forms, Last year’s tax return, Social Security numbers & Bank account information.</li>
 <li>Now, visit official IRS Free File portal - <b><a href="https://wwwirsgovfreefile.github.io">www.irs.gov/freefile</a></b>.</li>
 <li>Thereafter, select Free File Fillable Forms option.</li>
 <li>Enter basic information - Your name, Date of birth, Address, Social Security number (SSN).</li>
